@startuml UIFrameworkMenu
allow_mixing
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam packageStyle rectangle
skinparam roundcorner 8
skinparam noteBackgroundColor #FAFAFA
hide empty members

' ─────────────────────────────────────────
' Component hierarchy
' ─────────────────────────────────────────

package "components" {

    interface Component {
        + create(parent: Control): Widget
        + closable(): boolean
        + menu(): Optional<MenuModel>
        + contextMenu(): Optional<MenuModel>
        + availableActions(): Set<String>
    }

    interface ContainerComponent {
        + addComponent(component: Component)
        + removeComponent(component: Component): boolean
        + selected(): Component
    }

    interface ApplicationComponent {
        + start()
        + shutDown()
        + getActiveContainer(): ContainerComponent
        + setLogicallyActive(container: ContainerComponent)
        + getContainers(): Set<ContainerComponent>
    }

    ContainerComponent   --|> Component
    ApplicationComponent --|> ContainerComponent
}

note right of Component
  <b>availableActions()</b>
  Returns action strings this component
  can handle <i>right now</i>.
  Default = empty.
  Used by both registries for enabled/disabled.
end note

' ─────────────────────────────────────────
' Menu model
' ─────────────────────────────────────────

package "menu.model" {

    class MenuModel {
        + menus: Map<String, List<MenuItemModel>>
    }

    class MenuItemModel {
        + label: String
        + action: String
        + eventType: Class<?>
        + enabled: boolean
        + visible: boolean
        + listeners: List<Class<? extends Component>>
    }

    MenuModel "1" *-- "0..*" MenuItemModel : contains
}

note bottom of MenuItemModel
  <b>Main bar</b>: listeners[] used for routing
  <b>Context menu</b>: listeners[] unused —
  target is always the right-clicked component

  <b>eventType</b> — no-arg class instantiated
  at click time by the registry
end note

' ─────────────────────────────────────────
' MenuRegistry — main bar
' ─────────────────────────────────────────

package "menu" {

    interface MenuRegistry {
        + register(type: Class<? extends Component>, menu: MenuModel)
        + composed(): MenuModel
        + buildMenuBar(shell: Shell)
        + updateState(activeComponent: Component)
    }

    class DefaultMenuRegistry {
        - components: List<Component>   ' injected by DI
        - eventHub: EventHub
    }

    DefaultMenuRegistry ..|> MenuRegistry
}

note right of DefaultMenuRegistry
  <b>@CafeService</b> — DI injects List<Component>
  Scans menu() at construction, merges into
  composed model.

  buildMenuBar(shell):
    creates SWT bar from composed()
    attaches SelectionListener per item:
      event = eventType.newInstance()
      eventHub.send(CafeEventHandler, event)

  updateState(active):
    listeners empty         → enabled
    active.class ∈ listeners
      → enabled ↔ availableActions().contains(action)
    active.class ∉ listeners → disabled
end note

' ─────────────────────────────────────────
' ContextMenuRegistry — context menus
' ─────────────────────────────────────────

package "context" {

    interface ContextMenuRegistry {
        + register(type: Class<? extends Component>, menu: MenuModel)
        + menuFor(type: Class<? extends Component>): Optional<MenuModel>
        + bind(component: Component, widget: Control)
    }

    class DefaultContextMenuRegistry {
        - components: List<Component>   ' injected by DI
        - eventHub: EventHub
    }

    DefaultContextMenuRegistry ..|> ContextMenuRegistry
}

note right of DefaultContextMenuRegistry
  <b>@CafeService</b> — DI injects List<Component>
  Scans contextMenu() at construction.
  No merging — one MenuModel per component type.

  bind(component, widget):
    if no model for type → no-op
    attaches MenuDetectListener to widget:
      build pop-up from menuFor(type)
      enable ↔ availableActions().contains(action)
      on select: event = eventType.newInstance()
                 eventHub.sendTo(
                   CafeEventHandler, component, event)
end note

' ─────────────────────────────────────────
' EventHub (from cafe-beans)
' ─────────────────────────────────────────

class EventHub {
    + send(annotationType: Class<A>, args: Object...)
    + sendTo(annotationType: Class<A>, target: Object, args: Object...)
}

' ─────────────────────────────────────────
' Relationships
' ─────────────────────────────────────────

Component ..> MenuModel : provides via\nmenu() / contextMenu()

DefaultMenuRegistry        ..>  Component  : scans menu()\nat construction
DefaultMenuRegistry        -->  EventHub   : send on bar item click
DefaultMenuRegistry        ..>  Component  : availableActions()\nin updateState

DefaultContextMenuRegistry ..>  Component  : scans contextMenu()\nat construction
DefaultContextMenuRegistry -->  EventHub   : sendTo on context item click
DefaultContextMenuRegistry ..>  Component  : availableActions()\nat click time

ContainerComponent         ..>  ContextMenuRegistry : bind(component, widget)\nafter create()

MenuItemModel              ..>  Component  : listeners[]\n(type refs, not instances)

note right of ApplicationComponent
  Tracks <b>logically active</b> component.
  Menu clicks do NOT change logical active.

  When logicallyActive changes:
    → MenuRegistry.updateState(active)
end note

@enduml
